--- a/src/Relias.PEBot.Slack/Relias.PEBot.Slack.csproj
+++ b/src/Relias.PEBot.Slack/Relias.PEBot.Slack.csproj
@@ -5,11 +5,12 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <UserSecretsId>1c9382bb-ad30-48d1-9f47-c3d0c286ae1a</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
-    <PackageReference Include="SlackNet" Version="0.12.2" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.0-preview.1.25080.5" />
+    <PackageReference Include="SlackNet" Version="0.15.5" />
   </ItemGroup>
 
   <ItemGroup>
